mule-user-guide/v/3.6/application-format.adoc
=  Mule应用程序格式
:keywords: deploy, esb, amc, cloudhub, on premises, on premise

Mule应用程序的部署单元封装了应用程序需要运行的所有内容，例如库，自定义代码，配置，部署描述符以及应用程序附带的任何环境属性。它存在两种格式之一：

*  `.zip`文件（带有'zip'扩展名的常规归档文件）
* 同一个`.zip`文件的解压版本（爆炸应用）

[source, code, linenums]
----
/ \- classes                 // application-specific expanded resources (e.g. logging configuration files, properties, etc
|- lib                     // application-specific jars
|- mule-config.xml         // Main Mule configuration file, also monitored for changes
|- mule-deploy.properties  // Application deployment descriptor (optional)
|- mule-app.properties     // custom properties to be added to the registry instance used by the application (optional)
|- *.grf files             // produced by DataMapper to plot its data mapping
----

Mule支持部署包装（压缩）和爆炸（解压缩）应用程序。

您可以通过 link:/mule-user-guide/v/3.6/mule-application-deployment-descriptor[*应用程序部署描述符*]属性在应用程序之间共享库。
